--- a/applications/todo_frontend/todo_frontend_deployment.yml
+++ b/applications/todo_frontend/todo_frontend_deployment.yml
@@ -1,10 +1,40 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: todo-frontend
+#   namespace: todo
+# spec:
+#   replicas: 2
+#   selector:
+#     matchLabels:
+#       app: todo-frontend
+#   template:
+#     metadata:
+#       labels:
+#         app: todo-frontend
+#     spec:
+#       containers:
+#       - name: todo-frontend
+#         image: 21deepak/todo-frontend:dev
+#         ports:
+#         - containerPort: 80
+#         resources:
+#           requests:
+#             memory: "128Mi"
+#             cpu: "100m"
+#           limits:
+#             memory: "256Mi"
+
+#             cpu: "500m"
+
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-frontend
-  namespace: todo
 spec:
-  replicas: 2
+  replicas: 4
   selector:
     matchLabels:
       app: todo-frontend
@@ -15,7 +45,8 @@ spec:
     spec:
       containers:
       - name: todo-frontend
-        image: 21deepak/todo-frontend:dev
+        # image: 21deepak/todo-frontend:dev
+        image: 21deepak/todo-frontend:7cbf87d999b486a7e34b665904ea5d5be124c90a
         ports:
         - containerPort: 80
         resources:
@@ -24,6 +55,4 @@ spec:
             cpu: "100m"
           limits:
             memory: "256Mi"
-
             cpu: "500m"
-
