--- a/applications/todo_frontend/todo_frontend_app.yml
+++ b/applications/todo_frontend/todo_frontend_app.yml
@@ -13,7 +13,7 @@ spec:
     path: applications/todo_frontend
   destination:
     server: https://kubernetes.default.svc   # Replace with your Cluster Url, To get run: `argocd cluster list`
-    namespace: todo
+    namespace: default
   syncPolicy:
     automated:
       prune: true
