--- a/applications/todo_frontend/todo_frontend_app.yml
+++ b/applications/todo_frontend/todo_frontend_app.yml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: todo-frontend-app
-  namespace: argocd
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-options: CreateNamespace=true
 spec:
